<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Kra!</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">Step 1</string>
    <string name="second_fragment_label">Step 2</string>
    <string name="third_fragment_label">Step 3</string>
    <string name="fourth_fragment_label">Step 4</string>
    <string name="fifth_fragment_label">Step 5</string>
    <string name="sixth_fragment_label">Step 6</string>
    <string name="first_fragment_title">Planting Date: </string>
    <string name="first_fragment_text">Please pick a date </string>
    <string name="first_fragment_speak">Please pick a date by click on the date icon</string>
    <string name="second_fragment_text">Please choose your location </string>
    <string name="second_fragment_speak">Please pick a location by pin your place</string>
    <string name="second_fragment_title">Geolocation:</string>
    <string name="third_fragment_title">Rice Variety</string>
    <string name="third_fragment_speak">Please choose rice variety</string>
    <string name="fourth_fragment_title">Nitrogen Fertiliser Type</string>
    <string name="fourth_fragment_speak">Please select nitrogen fertiliser type</string>
    <string name="fifth_fragment_title">Nitrogen Fertiliser amount</string>
    <string name="fifth_fragment_speak">Please slide to choose how much nitrogen fertiliser you have applied</string>
    <string name="last_fragment_title">Seeding Rate</string>
    <string name="last_fragment_speak">Please slide to choose seeding rate</string>
    <string name="google_maps_api_key">AIzaSyDOY_2myAK5qdlf9hrWTOdfBCTU_ae0UiU</string>
    <string name="open_weather_api_key">a3f127679252479ad077c9c40dfafb68</string>
    <string name="weather_api_key">64ed820f1daf436382735819202505</string>
    <string name="google_message_server_key">AAAACVwpELQ:APA91bHMtBzItTKwBGVJOMBO0pXeo3FmtVOPxY4rWeDJXWeUjgwuAbyqP1mOLzvujWI_DYQM6sq3W-_BXxzVzCTuLe_K6bX-vM5bamNMaRXtmGNjuHKIWZyjUh8txTzIHgJV5EPGo0c4</string>
    <string name="df_step3_item1_name">Sen Kraob</string>
    <string name="df_step3_item2_name">Phka Rumdoul</string>
    <string name="df_step3_item3_name">Phka Malis</string>
    <string name="df_step3_item4_name">Ka Nhei</string>
    <string name="df_step3_item5_name">OM</string>
    <string name="df_step3_item6_name">Srangae</string>
    <string name="df_step4_item1_name">UREA</string>
    <string name="df_step4_item2_name">DAP</string>
    <string name="df_step4_item3_name">NPK</string>
    <string name="df_unit"> kg/ha</string>
    <string name="df_unit_speak">kilogram per hectare</string>
    <string name="df_result_page_name">Result</string>
    <string name="df_result_risk_high">High</string>
    <string name="df_step6_submit">Submit</string>
    <string name="df_step6_range_text">range: 0 – 300 kg/ha</string>
    <string name="df_step5_range_text">range: 0 – 500 kg/ha</string>
    <string name="df_result_title_text">Risk of leaf blast is ranked as:</string>
    <string name="df_result_mr">Fertilize each of the different cultivars properly. Avoid overuse of nitrogen fertilizers, using high quality and disease-free seed</string>
    <string name="df_result_mr_title">Management Recommendation:</string>
    <string name="df_result_risk_low">Low</string>
    <string name="df_result_risk_medium">Medium</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_home">Home</string>
    <string name="menu_df">Disease Forecast</string>
    <string name="menu_lt">Learning Tutorials</string>
    <string name="menu_ml">Diagnose Disease</string>
    <string name="menu_fs">For Students</string>
    <string name="menu_logout">Sign Out</string>
    <string name="nav_header_title">Kra!</string>
    <string name="take_photo_button">Take a photo</string>
    <string name="choose_photo_button">Choose from library</string>
    <string name="diagnose_photo_button">Diagnose</string>
    <string name="terms_title">Terms &amp; Conditions</string>
    <string name="terms_and_conditions">we built the Kra! app as a Free app. This SERVICE is provided by Kra! at no cost and is intended for use as is.\n\nThis page is used to inform visitors regarding our policies with the collection, use, and disclosure of Personal Information if anyone decided to use our Service.\n\nIf you choose to use our Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that we collect is used for providing and improving the Service. We will not use or share your information with anyone except as described in this Privacy Policy.\n\nThe terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at Kra! unless otherwise defined in this Privacy Policy.\n\nInformation Collection and Use\n\nFor a better experience, while using our Service, we may require you to provide us with certain personally identifiable information. The information that we request will be retained by us and used as described in this privacy policy.\n\nThe app does use third party services that may collect information used to identify you.\n\nLink to privacy policy of third party service providers used by the app\n\nGoogle Play Services\n\nFirebase Analytics\n\nFacebook\n\nLog Data\n\nWe want to inform you that whenever you use our Service, in a case of an error in the app we collect data and information (through third party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing our Service, the time and date of your use of the Service, and other statistics.\n\nCookies\n\nCookies are files with a small amount of data that are commonly used as anonymous unique identifiers. These are sent to your browser from the websites that you visit and are stored on your device\'s internal memory.\n\nThis Service does not use these “cookies” explicitly. However, the app may use third party code and libraries that use “cookies” to collect information and improve their services. You have the option to either accept or refuse these cookies and know when a cookie is being sent to your device. If you choose to refuse our cookies, you may not be able to use some portions of this Service.\n\nService Providers\n\nWe may employ third-party companies and individuals due to the following reasons:\n\nTo facilitate our Service;\n\nTo provide the Service on our behalf;\n\nTo perform Service-related services; or\n\nTo assist us in analyzing how our Service is used.\n\nWe want to inform users of this Service that these third parties have access to your Personal Information. The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information for any other purpose.+"/n"+\n\nSecurity\n\nWe value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and we cannot guarantee its absolute security.\n\nLinks to Other Sites\n\nThis Service may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by us. Therefore, we strongly advise you to review the Privacy Policy of these websites. We have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.\n\nChildren’s Privacy\n\nThese Services do not address anyone under the age of 13. We do not knowingly collect personally identifiable information from children under 13. In the case we discover that a child under 13 has provided us with personal information, we immediately delete this from our servers. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact us so that we will be able to do necessary actions.\n\nChanges to This Privacy Policy\n\nWe may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. We will notify you of any changes by posting the new Privacy Policy on this page. These changes are effective immediately after they are posted on this page.\n\nContact Us\n\nIf you have any questions or suggestions about our Privacy Policy, do not hesitate to contact us at email</string>
    <string name="login_btn_text">LOG IN</string>
    <string name="phone_number">Phone Number</string>
    <string name="text_i_have_accepted">I have accepted the</string>
    <string name="loading_message">verifying…</string>
    <string name="login_resend">Resend</string>
    <string name="test1_txt">What is leaf blast?</string>
    <string name="test1_time" tools:ignore="MissingTranslation">25:47</string>
    <string name="test2_time" tools:ignore="MissingTranslation">16:33</string>
    <string name="listening_input">Listening...</string>
    <string name="test2_txt">Diseases of rice.</string>
    <string name="test3_time" tools:ignore="MissingTranslation">13:05</string>
    <string name="test3_txt">bacterial leaf blight.</string>
    <string name="test4_txt">Major Diseases.</string>
    <string name="test4_time" tools:ignore="MissingTranslation">5:12</string>
    <string name="test5_txt">Brown leaf spot.</string>
    <string name="test6_txt">Paddy crop of rice.</string>
    <string name="test7_txt">Rice blast disease.</string>
    <string name="tut_search">Search…</string>
    <string name="channel_txt">Youtube Tutorial Channel</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="login_verify_hint">Enter Verification Code</string>
    <string name="login_verify_text">Verify</string>
    <string name="df_alert_title">Error!</string>
    <string name="df_alert_first">You have not set following data: </string>
    <string name="df_delete_title">Confirm Delete</string>
    <string name="df_delete_message">Are you sure to delete this record?</string>
    <string name="df_no_delete_title">Alert!</string>
    <string name="df_no_delete_message">You are not allowed to delete the latest record</string>
    <string name="df_log_speak_1">You created a record on </string>
    <string name="df_log_pd">You planted rice on date</string>
    <string name="df_log_rv">with variety</string>
    <string name="df_log_nf">you used nitrogen fertiliser</string>
    <string name="df_log_speak_2">Click left button if you want to use previous data, click right button if you want to start a new one</string>
    <string name="cd_pd">Plant Date:</string>
    <string name="cd_lr">Current Record</string>
    <string name="cd_rv">Variety:</string>
    <string name="cd_loc">Location:</string>
    <string name="cd_nft">N Type:</string>
    <string name="cd_sr">Seeding Rate:</string>
    <string name="cd_nfa">N Fert Amount:</string>
    <string name="cd_ut_btn">Set Alarm</string>
    <string name="cd_cn_btn">Create New</string>
    <string name="df_result_gb_btn">Go Back</string>
    <string name="cd_log_title">Daily report</string>
    <string name="dialog_ok">Ok</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="record_days">Days after Planting</string>
    <string name="record_temp">Temp</string>
    <string name="record_humid">Humidity</string>
    <string name="record_rain">Rainfall</string>
    <string name="record_risk">Risk score</string>
    <string name="df_history_created_on">Created on:</string>
    <string name="notification_title">Kra! Alarm</string>
</resources>