<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DfResultActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/df_bg"
        android:layout_marginTop="?attr/actionBarSize"
        android:gravity="center"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/df_result_page_margin"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/df_result_title_text"
            android:textSize="@dimen/df_text_size"
            android:textColor="@color/colorPrimaryDark" />
        <RelativeLayout
            android:id="@+id/risk_high"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="center">
        <ImageView
            android:id="@+id/df_result_circle_high"
            android:layout_width="@dimen/risk_width"
            android:layout_height="@dimen/risk_width"
            android:src="@drawable/df_shape_circle"
            android:tint="@color/risk_high"
            android:layout_marginTop="@dimen/df_result_margin"
            android:layout_gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/df_result_circle_high"
                android:layout_alignTop="@id/df_result_circle_high"
                android:layout_alignEnd="@id/df_result_circle_high"
                android:layout_alignBottom="@id/df_result_circle_high"
                android:text="@string/df_result_risk_high"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="center"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/risk_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="center">
            <ImageView
                android:id="@+id/df_result_circle_medium"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/df_shape_circle"
                android:tint="@color/risk_medium"
                android:layout_marginTop="@dimen/df_result_margin"
                android:layout_gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/df_result_circle_medium"
                android:layout_alignTop="@id/df_result_circle_medium"
                android:layout_alignEnd="@id/df_result_circle_medium"
                android:layout_alignBottom="@id/df_result_circle_medium"
                android:text="@string/df_result_risk_medium"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/risk_low"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="center">
            <ImageView
                android:id="@+id/df_result_circle_low"
                android:layout_width="@dimen/risk_width"
                android:layout_height="@dimen/risk_width"
                android:src="@drawable/df_shape_circle"
                android:tint="@color/risk_low"
                android:layout_marginTop="@dimen/df_result_margin"
                android:layout_gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/df_result_circle_low"
                android:layout_alignTop="@id/df_result_circle_low"
                android:layout_alignEnd="@id/df_result_circle_low"
                android:layout_alignBottom="@id/df_result_circle_low"
                android:text="@string/df_result_risk_low"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="center"/>
        </RelativeLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/df_result_mr_title"
            android:textSize="@dimen/df_text_size"
            android:fontFamily="@font/montserrat"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginTop="@dimen/df_result_margin" />
        <TextView
            android:id="@+id/df_result_mr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/df_result_mr"
            android:textSize="@dimen/df_text_size_small"
            android:textColor="@color/greyDark"
            android:layout_marginTop="@dimen/card_margin" />
    </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="bottom|right"
            android:layout_marginEnd="@dimen/df_result_page_margin">
        <Button
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorMain"
            android:layout_marginEnd="@dimen/df_result_margin"
            android:text="@string/df_result_gb_btn"/>
    <ImageButton
        android:id="@+id/speaker_df_result"
        android:layout_width="@dimen/df_speaker_size"
        android:layout_height="@dimen/df_speaker_size"
        android:src="@mipmap/speaker"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:background="@drawable/round_button" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>